RESOLVED FIXED310662
Fix empty TransferString being deserialized as null string
https://bugs.webkit.org/show_bug.cgi?id=310662
Summary Fix empty TransferString being deserialized as null string
Ben Nham
Reported 2026-03-24 15:16:03 PDT
Sending an empty String instance over IPC via TransferString results in a null String instance on the receiver side. This is unexpected and can cause downstream issues. For instance, if the receiver then puts the unexpectedly null String in to a hash map, it will crash.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-24 15:16:11 PDT
Ben Nham
Comment 2 2026-03-24 15:21:42 PDT
EWS
Comment 3 2026-03-25 14:31:06 PDT
Committed 309942@main (a547e2d7692b): <https://commits.webkit.org/309942@main> Reviewed commits have been landed. Closing PR #61272 and removing active labels.
WebKit Commit Bot
Comment 4 2026-03-25 15:47:44 PDT
Re-opened since this is blocked by bug 310738
Ben Nham
Comment 5 2026-03-25 16:09:45 PDT
EWS
Comment 6 2026-03-25 21:38:40 PDT
Committed 309962@main (0e087dfe1af1): <https://commits.webkit.org/309962@main> Reviewed commits have been landed. Closing PR #61359 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.