Source/WebKit/Platform/IPC/ArgumentCoders.h
@@ -847,6 +847,12 @@ template<> struct ArgumentCoder<std::nullptr_t> {
     static std::optional<std::nullptr_t> decode(Decoder&) { return nullptr; }
 };
 
+template<> struct ArgumentCoder<std::monostate> {
+    template<typename Encoder>
+    static void encode(Encoder&, const std::monostate&) { }
+    static std::optional<std::monostate> decode(Decoder&) { return std::monostate { }; }
+};
+
 template<typename T, typename Traits> struct ArgumentCoder<WTF::Markable<T, Traits>> {
     template<typename Encoder, typename U>
     static void encode(Encoder& encoder, U&& markable)
